# ascii-art

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  output.txt  vcpkg.json
include/: application.h  argument_parser.h  ascii_debug.h  ascii_parser.h  image.h  image_loader.h
src/: application.cpp  argument_parser.cpp  ascii_debug.cpp  ascii_parser.cpp  image.cpp  image_loader.cpp  main.cpp
